# k8s-slo-manager

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.excalidraw
examples/: slos.yaml
k8s/: deployment.yaml  grafana-dashboard.json  prometheusrule.yaml
slo_manager/: __init__.py  alerter.py  burn_rate.py  cli.py  evaluator.py  loader.py  models.py  reporter.py
tests/: test_evaluator.py
