[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "k8s-slo-manager"
version = "0.1.0"
description = "SLO tracking, error budget calculation, and burn-rate alerting for Kubernetes services"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ashiq Ali", email = "ashiq2619@gmail.com" }]
keywords = ["kubernetes", "slo", "sli", "sre", "prometheus", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
slo = "slo_manager.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=slo_manager --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
